# hydra-flyte

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  structs.py
app/config/: config.yaml
app/config/connection/: postgres.yaml
app/config/hyperparameters/: medium.yaml  small.yaml
app/config/structure/: planes.yaml
config/: config.yaml
config/connection/: postgres.yaml  snowflake.yaml
config/hyperparameters/: large.yaml  lg.yaml  md.yaml  sm.yaml
config/schema/: cars.yaml  planes.yaml
flyte_hydra/: structs.py
my_app/: __main__.py  structs.py
outputs/2024-11-05/12-29-38/.hydra/: hydra.yaml
outputs/2024-11-05/12-31-26/.hydra/: config.yaml  hydra.yaml
outputs/2024-11-05/12-51-44/.hydra/: hydra.yaml
outputs/2024-11-05/12-52-00/.hydra/: config.yaml  hydra.yaml
outputs/2024-11-05/12-52-49/.hydra/: hydra.yaml
outputs/2024-11-05/12-53-03/.hydra/: config.yaml  hydra.yaml
outputs/2024-11-05/12-54-56/.hydra/: hydra.yaml
outputs/2024-11-05/12-55-40/.hydra/: config.yaml  hydra.yaml
outputs/2024-11-05/12-58-01/.hydra/: hydra.yaml
outputs/2024-11-05/12-58-19/.hydra/: hydra.yaml
outputs/2024-11-05/12-59-05/.hydra/: hydra.yaml
outputs/2024-11-05/12-59-11/.hydra/: hydra.yaml
outputs/2024-11-05/12-59-34/.hydra/: hydra.yaml
outputs/2024-11-05/13-00-08/.hydra/: hydra.yaml
outputs/2024-11-05/13-00-23/.hydra/: hydra.yaml
outputs/2024-11-05/13-01-34/.hydra/: config.yaml  hydra.yaml
outputs/2024-11-05/13-01-40/.hydra/: hydra.yaml
outputs/2024-11-05/13-02-46/.hydra/: hydra.yaml
outputs/2024-11-05/13-03-45/.hydra/: config.yaml  (+1 more)
(+32 files in other folders)
