[project]
name = "flyte_hydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flytekit",
    "hydra-core>=1.3.2",
    "pydantic>=2.9.2",
    "union>=0.1.87",
]

[tool.uv.sources]
flytekit = { git = "https://github.com/flyteorg/flytekit.git", branch = "master" }
